# test_ethercat

build-test2-Desktop_Qt_5_12_10_GCC_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  test2
build-test2-Desktop_Qt_5_12_10_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-a0b1b47043baf7a639ad.json  cmakeFiles-v1-6671e5985e6b30703875.json  codemodel-v2-3c4badfef4237ba6d055.json  index-2021-06-14T08-54-34-0043.json  target-test2-Debug-30012dda5c77679db4f7.json
test2/: CMakeLists.txt  m2.cpp  main.cpp
